Merge fixes from main branch (and update JDK requirement to version 8).